--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -1,7 +1,7 @@
 <div class="row" id="page_title_row">
     <h1 class="col-3 fixed-width">inventory</h1>
     <div class="col-8 stretch-width" id="search_container">
-      <input type="text" name="textbox" id="search_bar" value="search" on="search()">
+      <input type="text" name="textbox" id="search_bar" value="search" oninput="search()">
     </div>
   </div>
   <div class="row" id="button-row">
@@ -41,3 +41,4 @@
     <span>Location</span>
     <span> </span>
   </div>
+  <div class="row " id="row-container"></div>
