--- a/templates/part_template.html
+++ b/templates/part_template.html
@@ -63,31 +63,31 @@
         <div class="col">
           <div class="row">
             <div class="col-auto data-container">
-              <label class="data-label" for="object_43_Name">Name</label>
-              <input class="name-width data-entry" type="text" name="textbox" id="{{SKU}}_Name"
+              <label class="data-label" >Name</label>
+              <input class="name-width data-entry" type="text"  id="{{SKU}}_Name"
                 value="{{Name}}">
             </div>
             <div class="col-auto data-container">
-              <label class="data-label" for="object_43_Value">Value</label>
-              <input class="value-width data-entry" type="text" name="textbox" id="{{SKU}}_Value" value="{{Value}}">
+              <label class="data-label">Value</label>
+              <input class="value-width data-entry" type="text"  id="{{SKU}}_Value" value="{{Value}}">
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_Footprint">Footprint</label>
-              <input class="footprint-width data-entry" type="text" name="textbox" id="{{SKU}}_Footprint"
+              <input class="footprint-width data-entry" type="text"  id="{{SKU}}_Footprint"
                 value="{{Footprint}}">
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_Quantity">Quantity</label>
-              <input class="quantity-width data-entry" type="text" name="textbox" id="{{SKU}}_Quantity"
+              <input class="quantity-width data-entry" type="text"  id="{{SKU}}_Quantity"
                 value="{{Quantity}}">
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_Rating">Rating</label>
-              <input class="rating-width data-entry" type="text" name="textbox" id="{{SKU}}_Rating" value="{{Rating}}">
+              <input class="rating-width data-entry" type="text"  id="{{SKU}}_Rating" value="{{Rating}}">
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="Group">Group</label>
-              <!-- <input class= "group-width data-entry" type="text" name="textbox" id="object_43_group" value="none"> -->
+              <!-- <input class= "group-width data-entry" type="text"  id="object_43_group" value="none"> -->
               <select class="group-width data-entry" id="{{SKU}}_Group" name="fruit">
                 <option value="Passives">Passives</option>
                 <option value="low stock">low stock</option>
@@ -98,27 +98,27 @@
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_location">Location</label>
-              <input class="location-width data-entry" type="text" name="textbox" id="{{SKU}}_Location"
+              <input class="location-width data-entry" type="text"  id="{{SKU}}_Location"
                 value="{{Location}}">
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_tags">Tags</label>
-              <input class="tags-width data-entry" type="text" name="textbox" id="{{SKU}}_Tags" value="{{Tags}}">
+              <input class="tags-width data-entry" type="text"  id="{{SKU}}_Tags" value="{{Tags}}">
             </div>
           </div>
           <div class="row">
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_sku">SKU</label>
-              <input class="sku-width data-entry" type="text" name="textbox" id="{{SKU}}_SKU" value="{{SKU}}" readonly>
+              <input class="sku-width data-entry" type="text"  id="{{SKU}}_SKU" value="{{SKU}}" readonly>
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_price">Price</label>
-              <input class="price-width data-entry" type="text" name="textbox" id="{{SKU}}_Price"
+              <input class="price-width data-entry" type="text"  id="{{SKU}}_Price"
                 value="{{Price}}">
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_warningstock">Warning Stock</label>
-              <input class="price-width data-entry" type="text" name="textbox" id="{{SKU}}_Warning_Stock"
+              <input class="price-width data-entry" type="text"  id="{{SKU}}_Warning_Stock"
                 value="{{Warning_Stock}}">
             </div>
           </div>
@@ -127,12 +127,12 @@
               <div class="row">
                 <div class="col-auto data-container">
                   <label class="data-label" for="object_43_warningstock">Source</label>
-                  <input class="source-width data-entry" type="text" name="textbox" id="{{SKU}}_Source"
+                  <input class="source-width data-entry" type="text"  id="{{SKU}}_Source"
                     value="{{Source}}">
                 </div>
                 <div class="col-auto data-container">
                   <label class="data-label" for="object_43_datasheet">Datasheet</label>
-                  <input class="datasheet-width data-entry" type="text" name="textbox" id="{{SKU}}_Datasheet"
+                  <input class="datasheet-width data-entry" type="text"  id="{{SKU}}_Datasheet"
                     value="{{Datasheet}}">
                 </div>
               </div>
