--- a/static/styles.css
+++ b/static/styles.css
@@ -185,6 +185,13 @@ select:focus{
   flex:none;
 }
 
+#row-container{
+  margin:0px;
+  padding:0px 50px;
+  width:100%;
+ max-width:100%;
+}
+
 .table-row{
   display: flex;
   justify-content: space-between;
@@ -261,6 +268,8 @@ a img{
   width: 60%;
 }
 
+
+
 .part-detail-box{
   display: flex;
   justify-content: space-between;
@@ -269,10 +278,9 @@ a img{
   padding:5px 0px;
 }
 
-
 .table-details-row{
   padding:0px;
-  margin:0px 50px;
+  margin:0px 0px;
   border-radius: 0px;
   /* margin-right: 30px;
   margin-left: 30px; */
