--- a/static/styles.css
+++ b/static/styles.css
@@ -130,7 +130,14 @@ h1{
   margin-top: 2px;
 }
 
+#button-row img{
+  width:30px;
+  margin:5px;
+}
 
+#button-row{
+  height:40px;
+}
 
 #button-row button{
   all: unset;
@@ -530,3 +537,45 @@ margin:10px;
   transition: height 0.5s ease;
 }
 
+.flex-row{
+  padding:0px 40px;
+}
+
+
+.text-with-arrows {
+  display: inline-block;
+
+}
+
+.arrow-container{
+  display: flex;
+  justify-content: center;
+}
+
+.arrow-container img {
+  height: 5px;
+  width: 10px;
+  margin:2px 10px;
+}
+
+.arrow-container img:hover{
+  height: 8px;
+}
+
+span.vstack{
+  display:block;
+}
+
+.hstack {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-self: stretch;
+}
+
+.vstack {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  align-self: stretch;
+}
