remove filtering row, working state

--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -5,21 +5,16 @@
     </div>
   </div>
   <div class="d-flex flex-row" id="button-row">
-    <div class="p-2">
+    <!-- <div class="p-2">
         <img src="../static/images/icons/filter.png" alt="filter" />
     </div>
-    <div class="p-2">
-      <button>
-        + sort
-      </button>
-    </div>
-    <div class="p-2">
+    <div class="p-2" style="display: none;">
       <button>
         + filter
       </button>
     </div>
     <div class="col-6">
-    </div>
+    </div> -->
     <div class="p-2">
       <button onclick="addPart()">
         + part
